--- a/HotelManagement/HotelManagement/Views/Reservation/AddBookedRoomWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/AddBookedRoomWindow.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         Background="WhiteSmoke"
         Name="windowAddRoom"
+        WindowStartupLocation="CenterScreen"
         SizeToContent="WidthAndHeight"
         ResizeMode="NoResize"
         Title="Add Room">
