--- a/HotelManagement/HotelManagement/Views/Reservation/AddBookingGuestWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/AddBookingGuestWindow.xaml
@@ -110,6 +110,20 @@
                     materialDesign:TextFieldAssist.HasClearButton="True"
                     materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"/>
 
+                <ComboBox
+                    Grid.Column="0"
+                    Width="230" Margin="0,3,0,3"
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                    materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"
+                    materialDesign:ColorZoneAssist.Mode="SecondaryLight"
+                    materialDesign:HintAssist.Hint="Select room"
+                    materialDesign:HintAssist.IsFloating="True"
+                    FontSize="14" VerticalContentAlignment="Center"
+                    SelectedValue="{Binding Path=NewSharer.Room}"
+                    ItemsSource="{Binding Path=SelectedRooms}"
+                    DisplayMemberPath="RoomName">
+                </ComboBox>
+
                 <Button
                     Margin="0,5,0,0"
                     Content="Add new sharer" FontSize="14"
