--- a/HotelManagement/HotelManagement/App.xaml
+++ b/HotelManagement/HotelManagement/App.xaml
@@ -10,7 +10,10 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
-                <ResourceDictionary Source="Resources/NavigationRail.xaml"/>
+                <ResourceDictionary Source="Resources/Icons.xaml"/>
+                <ResourceDictionary Source="Resources/MainStyle.xaml"/>
+                <ResourceDictionary Source="Resources/Themes.xaml"/>
+                <ResourceDictionary Source="Resources/MenuItem.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
