--- a/HotelManagement/HotelManagement/Views/ReportsView.xaml
+++ b/HotelManagement/HotelManagement/Views/ReportsView.xaml
@@ -12,6 +12,10 @@
         <viewModels:ReportsViewModel/>
     </UserControl.DataContext>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center">
